<resources>
    <string name="app_name">SUBWAYシミュレーター</string>
    <string name="action_settings">チュートリアルを見る</string>
    <string name="step1">1.サンドウィッチ</string>
    <string name="step2">2.パン</string>
    <string name="step3">3.トッピング</string>
    <string name="step4">4.野菜</string>
    <string name="step5">5.ドレッシング</string>
    <string name="lettuce">●レタス</string>
    <string name="tomato">●トマト</string>
    <string name="green_pepper">●ピーマン</string>
    <string name="red_onion">●レッドオニオン</string>
    <string name="carrot">●ニンジン</string>
    <string name="olive">●オリーブ</string>
    <string name="pickles">●ピクルス</string>
    <string name="hot_pepper">●ホットペッパー</string>
    <string name="name_edit">レシピの名前(10文字まで)</string>
    <string name="complete">レシピ完成！</string>
    <string name="sumtext1">合計:</string>
    <string name="sumtext2">円</string>
    <string name="recommend">おすすめドレッシングを自動選択する</string>
    <string name="toast">トーストする</string>
    <string name="skip">スキップする</string>
    <string name="done">完了</string>
    <string name="title_activity_recipe_result">RecipeResult</string>
    <string name="action_edit">レシピを編集</string>
    <string name="action_sns">レシピを共有</string>
    <string name="recipe_name">レシピ名</string>
    <string name="recipe_price">金額</string>
    <string name="type">●種類</string>
    <string name="amount">●量</string>
    <string name="action_policy">プライバシーポリシー</string>
    <string name="free_topping">無料トッピング</string>
    <string name="one">1</string>
    <string name="foot_long">フットロングにする(+ 300円)</string>
    <string name="step5_2">5-2.追加ドレッシング</string>
    <string name="add_dressing_text">ドレッシングを追加する</string>
    <string name="separate_dressing">左右に分けてかける</string>
    <string name="blend_dressing">ブレンドする</string>
    <string name="remove_dressing_text">ドレッシングを1つにする</string>
    <string name="facebook_app_id">2184376268492554</string>
    <string name="action_save_image">レシピ画像を保存</string>
    <string name="recipe_detail">レシピ詳細</string>
    <string name="ad_app_id">ca-app-pub-9742059950156424~8280793083</string>
    <string name="ad_unit_id">ca-app-pub-9742059950156424/4122056222</string>
</resources>
